
Correct DataStore to store space part with the related data.
